x86/include/TestEngine.h


TESTENGINE_API(uint32) openTestEngineDebug(int32 port, int32 multi, int32 transport);
TESTENGINE_API(uint32) openTestEngineDebugUnlock(int32 port, int32 multi,
                                                 int32 transport,
                                                 const char* unlockKey);
TESTENGINE_API(uint32) openTestEngineDebugTrans(const char* trans, int32 multi);
TESTENGINE_API(uint32) openTestEngineDebugUnlockTrans(const char* trans, int32 multi,
                                                      const char* unlockKey);
TESTENGINE_API(int32) bccmdPsuSmpsEnable(uint32 handle, uint16 reg);
TESTENGINE_API(int32) bccmdPsuHvLinearEnable(uint32 handle, uint16 reg);
TESTENGINE_API(int32) bccmdLed0Enable(uint32 handle, uint16 state);
TESTENGINE_API(int32) bccmdLed1Enable(uint32 handle, uint16 state);
TESTENGINE_API(int32) bccmdChargerSuppressLed0(uint32 handle, uint16 state);
TESTENGINE_API(int32) teGetAvailableDebugPorts(uint16* maxLen, char* ports,
                                               char* trans, uint16* count);
TESTENGINE_API(int32) teI2cTransfer(uint32 handle, uint16 pioScl, uint16 pioSda,
                                    uint16 devAddr, uint16 clockKhz,
                                    uint16 txOctets, uint16 rxOctets,
                                    uint8 data[], uint16* rxdOctets);
TESTENGINE_API(int32) teNvmTagRead(uint32 handle, uint16 tagId, uint8 valueLen,
                                   uint8 value[], uint8* readLen);
TESTENGINE_API(int32) teNvmTagWrite(uint32 handle, uint16 tagId, uint8 valueLen,
                                    const uint8 value[]);
TESTENGINE_API(int32) tePsGetNextKeyId(uint32 handle, uint8 keyType,
                                       uint8 resetSearch, uint32* keyId,
                                       uint8* endOfStore);
TESTENGINE_API(int32) tePsRead(uint32 handle, uint32 keyId, uint16 valueLen,
                               uint16 value[], uint16* readLen);
TESTENGINE_API(int32) tePsWrite(uint32 handle, uint32 keyId, uint16 valueLen,
                                const uint16 value[]);
TESTENGINE_API(int32) tePsAudioRead(uint32 handle, uint32 keyId, uint16 valueLen,
                                    uint16 value[], uint16* readLen);
TESTENGINE_API(int32) tePsAudioWrite(uint32 handle, uint32 keyId, uint16 valueLen,
                                     const uint16 value[]);
TESTENGINE_API(int32) teRadGetMaxPayloadLen(uint8 pktType, uint16* maxLen);
TESTENGINE_API(int32) teRadQhsStart(uint32 handle, uint8 testMode, uint8 channel,
                                    uint16 payloadLen, uint8 payload, uint8 phyRate,
                                    uint8 txPower, uint16 maxPackets, uint8 cteLen,
                                    uint8 cteType, uint8 slotDuration,
                                    uint8 numAntennae, const uint8 antennaIds[]);
TESTENGINE_API(int32) teRadRxContStart(uint32 handle, uint8 techType, uint8 channel,
                                       uint8 swGain, uint8 lePhy);
TESTENGINE_API(int32) teRadRxGetRssi(uint32 handle, uint8 techType, uint8 channel,
                                     uint8 numSamples, int8* rssi);
TESTENGINE_API(int32) teRadRxGetStats(uint32 handle, uint16* pktLen,
                                      uint32 pktsRxd[], uint32 acErrs[],
                                      uint32 hecErrs[], uint32 crcErrs[],
                                      uint32 totalBitErrs[], int16 rssi[],
                                      uint32* reserved);
TESTENGINE_API(int32) teRadRxPktCfg(uint32 handle, uint16 numPkts);
TESTENGINE_API(int32) teRadRxPktStart(uint32 handle, const uint8 channels[],
                                      uint8 payload, uint8 pktType,
                                      const char* bdAddr, uint8 hopMode,
                                      uint16 pktLen, uint8 ltAddr, uint32 reserved);
TESTENGINE_API(int32) teRadStop(uint32 handle);
TESTENGINE_API(int32) teRadTxContStart(uint32 handle, uint8 channel, uint8 power,
                                       uint8 transmitType, uint8 patternLen,
                                       uint32 bitPattern);
TESTENGINE_API(int32) teRadTxCwStart(uint32 handle, uint8 channel, uint8 power);
TESTENGINE_API(int32) teRadTxPktStart(uint32 handle, const uint8 channels[],
                                      uint8 payload, uint8 pktType, uint8 power,
                                      const char* bdAddr, uint8 hopMode,
                                      uint16 pktLen, uint8 ltAddr, uint32 reserved);
TESTENGINE_API(int32) teRadLeTxBurst(uint32 handle, uint8 hopMode, uint16 payloadLen,
                                     uint8 payloadType, uint8 pktType, uint8 power);
TESTENGINE_API(int32) teRadTxEnhanced(uint32 handle, uint8 channel, uint8 pktType,
                                      uint16 payloadLen, uint8 payloadType,
                                      uint32 payloadPattern, uint8 transmitType,
                                      uint8 ltAddr, uint8 hopping, const char* bdAddr,
                                      uint32 maxPkts, uint8 offSlots, uint8 power);
TESTENGINE_API(int32) teRadRxEnhanced(uint32 handle, uint8 channel, uint8 pktType,
                                      uint16 payloadLen, uint8 payloadType,
                                      uint32 payloadPattern, uint8 receiveType,
                                      uint8 ltAddr, uint8 hopping, const char* bdAddr,
                                      uint32 maxPkts, uint8 offSlots, uint8 rxSwGain);
TESTENGINE_API(int32) teRadRxGetStatsEnhanced(uint32 handle, uint32* pktsRxd,
                                              uint32* acErrs, uint32* hecErrs,
                                              uint32* crcErrs, uint32* totalBitErrs,
                                              int16* rssi, uint32* reserved);
#define bccmdPsuBuckReg              bccmdPsuSmpsEnable
#define bccmdPsuMicEn                bccmdPsuHvLinearEnable
#define bccmdLed0                    bccmdLed0Enable
#define bccmdLed1                    bccmdLed1Enable
#define bccmdChargerSupressLed0      bccmdChargerSuppressLed0
#define openTestEngineSpi            openTestEngineDebug
#define openTestEngineSpiTrans       openTestEngineDebugTrans
#define openTestEngineSpiUnlock      openTestEngineDebugUnlock
#define openTestEngineSpiUnlockTrans openTestEngineDebugUnlockTrans
#define teGetAvailableSpiPorts       teGetAvailableDebugPorts