x86/include/TestEngineAPI.cs


        [DllImport("TestEngine.dll", EntryPoint="teI2cTransfer",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teI2cTransfer(uint handle, ushort pioScl, ushort pioSda, ushort devAddr, ushort clockKhz, ushort txOctets, ushort rxOctets, byte [] data, out ushort rxdOctets);

        [DllImport("TestEngine.dll", EntryPoint="teNvmTagRead",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teNvmTagRead(uint handle, ushort tagId, byte valueLen, byte [] value, out byte readLen);

        [DllImport("TestEngine.dll", EntryPoint="teNvmTagWrite",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teNvmTagWrite(uint handle, ushort tagId, byte valueLen, byte [] value);

        [DllImport("TestEngine.dll", EntryPoint="tePsGetNextKeyId",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int tePsGetNextKeyId(uint handle, byte keyType, byte resetSearch, out uint keyId, out byte endOfStore);

        [DllImport("TestEngine.dll", EntryPoint="tePsRead",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int tePsRead(uint handle, uint keyId, ushort valueLen, ushort [] value, out ushort readLen);

        [DllImport("TestEngine.dll", EntryPoint="tePsWrite",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int tePsWrite(uint handle, uint keyId, ushort valueLen, ushort [] value);

        [DllImport("TestEngine.dll", EntryPoint="tePsAudioRead",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int tePsAudioRead(uint handle, uint keyId, ushort valueLen, ushort [] value, out ushort readLen);

        [DllImport("TestEngine.dll", EntryPoint="tePsAudioWrite",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int tePsAudioWrite(uint handle, uint keyId, ushort valueLen, ushort [] value);

        [DllImport("TestEngine.dll", EntryPoint="teRadGetMaxPayloadLen",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadGetMaxPayloadLen(byte pktType, out ushort maxLen);

        [DllImport("TestEngine.dll", EntryPoint="teRadQhsStart",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadQhsStart(uint handle, byte testMode, byte channel, ushort payloadLen, byte payload, byte phyRate, byte txPower, ushort maxPackets, byte cteLen, byte cteType, byte slotDuration, byte numAntennae, byte [] antennaIds);

        [DllImport("TestEngine.dll", EntryPoint="teRadRxContStart",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadRxContStart(uint handle, byte techType, byte channel, byte swGain, byte lePhy);

        [DllImport("TestEngine.dll", EntryPoint="teRadRxGetRssi",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadRxGetRssi(uint handle, byte techType, byte channel, byte numSamples, out sbyte rssi);

        [DllImport("TestEngine.dll", EntryPoint="teRadRxGetStats",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadRxGetStats(uint handle, out ushort pktLen, uint [] pktsRxd, uint [] acErrs, uint [] hecErrs, uint [] crcErrs, uint [] totalBitErrs, short [] rssi, out uint reserved);

        [DllImport("TestEngine.dll", EntryPoint="teRadRxPktCfg",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadRxPktCfg(uint handle, ushort numPkts);

        [DllImport("TestEngine.dll", EntryPoint="teRadRxPktStart",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadRxPktStart(uint handle, byte [] channels, byte payload, byte pktType, String bdAddr, byte hopMode, ushort pktLen, byte ltAddr, uint reserved);

        [DllImport("TestEngine.dll", EntryPoint="teRadStop",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadStop(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="teRadTxContStart",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadTxContStart(uint handle, byte channel, byte power, byte transmitType, byte patternLen, uint bitPattern);

        [DllImport("TestEngine.dll", EntryPoint="teRadTxCwStart",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadTxCwStart(uint handle, byte channel, byte power);

        [DllImport("TestEngine.dll", EntryPoint="teRadTxPktStart",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadTxPktStart(uint handle, byte [] channels, byte payload, byte pktType, byte power, String bdAddr, byte hopMode, ushort pktLen, byte ltAddr, uint reserved);

        [DllImport("TestEngine.dll", EntryPoint="teRadLeTxBurst",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadLeTxBurst(uint handle, byte hopMode, ushort payloadLen, byte payloadType, byte pktType, byte power);

        [DllImport("TestEngine.dll", EntryPoint="teRadTxEnhanced",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadTxEnhanced(uint handle, byte channel, byte pktType, ushort payloadLen, byte payloadType, uint payloadPattern, byte transmitType, byte ltAddr, byte hopping, String bdAddr, uint maxPkts, byte offSlots, byte power);

        [DllImport("TestEngine.dll", EntryPoint="teRadRxEnhanced",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadRxEnhanced(uint handle, byte channel, byte pktType, ushort payloadLen, byte payloadType, uint payloadPattern, byte receiveType, byte ltAddr, byte hopping, String bdAddr, uint maxPkts, byte offSlots, byte rxSwGain);

        [DllImport("TestEngine.dll", EntryPoint="teRadRxGetStatsEnhanced",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teRadRxGetStatsEnhanced(uint handle, out uint pktsRxd, out uint acErrs, out uint hecErrs, out uint crcErrs, out uint totalBitErrs, out short rssi, out uint reserved);


// DEPRECATED FUNCTIONS
		[DllImport("TestEngine.dll", EntryPoint="bccmdPsuSmpsEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdPsuBuckReg(uint handle, ushort reg);

		[DllImport("TestEngine.dll", EntryPoint="bccmdPsuHvLinearEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdPsuMicEn(uint handle, ushort reg);

		[DllImport("TestEngine.dll", EntryPoint="bccmdLed0Enable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdLed0(uint handle, ushort state);

		[DllImport("TestEngine.dll", EntryPoint="bccmdLed1Enable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdLed1(uint handle, ushort state);

		[DllImport("TestEngine.dll", EntryPoint="bccmdChargerSuppressLed0",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdChargerSupressLed0(uint handle, ushort state);

		[DllImport("TestEngine.dll", EntryPoint="openTestEngineDebug",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint openTestEngineSpi(int port, int multi, int transport);

		[DllImport("TestEngine.dll", EntryPoint="openTestEngineDebugTrans",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint openTestEngineSpiTrans(String trans, int multi);

		[DllImport("TestEngine.dll", EntryPoint="openTestEngineDebugUnlock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint openTestEngineSpiUnlock(int port, int multi, int transport, String unlockKey);

		[DllImport("TestEngine.dll", EntryPoint="openTestEngineDebugUnlockTrans",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint openTestEngineSpiUnlockTrans(String trans, int multi, String unlockKey);

		[DllImport("TestEngine.dll", EntryPoint="teGetAvailableDebugPorts",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teGetAvailableSpiPorts(out ushort maxLen, StringBuilder ports, StringBuilder trans, out ushort count);

	}
}